# simple_peft_recipe

./: .gitignore  LICENSE  Readme.md  pyproject.toml
examples/: __init__.py  chat.py
examples/guard/: __init__.py  guard_count_tokens.py  guard_eval.py  guard_test.py  guard_train.py
examples/instruct/: __init__.py  instruct.py
examples/rgym/: __init__.py  rgym.py
speftr/: __init__.py  perl.py  pesft.py
